# trt_ppocr3

./: README.md  gen_det_wts.py  gen_rec_wts.py  predict_det.py  predict_det_trt.py  predict_rec.py  predict_rec_trt.py
convert/det/: CMakeLists.txt  common.hpp  cuda_utils.h  main.cpp
convert/rec/: CMakeLists.txt  common.hpp  main.cpp
nets/: backbone.py  common.py  db_fpn.py  det_db_head.py  det_mobilenet_v3.py  head.py  neck.py
